<resources>
    <string name="app_name">VivaMovie</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="clean">Clean</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="fill">Fill all the inputs</string>
    <string name="error"> Error ! Check your connection !</string>
    <string name="successregister">User successfully registered !</string>
    <string name="usererror">User already exists !</string>
    <string name="successlogin">Login successfully !</string>
    <string name="errorlogin">Error ! User not found !</string>
    <string name="cancel">Cancel</string>
    <string name="requisition">Requisition don\'t succeed !</string>
    <string name="movielist">Movies List</string>
    <string name="vivadecora">Viva Decora</string>
    <string name="movies">Movies</string>
    <string name="checkout">Check out the Movies</string>
    <string name="select">Select</string>
    <string name="selectoptions">Select Qtd Movies Before Advertising</string>
    <string name="minmax">Min 4 | Max 12</string>
    <string name="tryagain">Try Again</string>
    <string name="captain">Confira todos os filmes dos estúdios Marvel</string>
    <string name="conferir">CONFERIR</string>
    <string name="contact">Contact</string>
    <string name="telephone">Telephone</string>
    <string name="email">Email</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="localization">Localization</string>
    <string name="genre">Genre</string>
    <string name="companies">Companies</string>
    <string name="about">About</string>
    <string name="developer">About the Developer</string>
    <string name="wallyson">Wallyson Lima</string>
    <string name="history">Bachelor of Computer Science from Unesp, loves the world of programming, Linux enthusiast and loves to share a cup of coffee with friends.</string>
    <string name="choose">Choose Email Client...</string>
    <string name="sendsucceed">Email successfully Send</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDfZPdu_9-yIAiUo8DuY3kJREb_CNqaED0</string>
    <string name="emailwally">wallyson.n.a.lima@gmail.com</string>
</resources>