<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4C4C4C"
    tools:context=".view.UI_ContactActivity">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="36dp"
        android:text="@string/vivadecora"
        android:textColor="@android:color/background_light"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextName"
        app:layout_constraintEnd_toStartOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="36dp"
        android:text="@string/contact"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="351dp"
        android:layout_height="62dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="351dp"
        android:layout_height="62dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/telephone"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="351dp"
        android:layout_height="62dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="29dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="347dp"
        android:layout_height="160dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/message"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <Button
        android:id="@+id/buttonClean"
        android:layout_width="145dp"
        android:layout_height="73dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="86dp"
        android:background="#EF6C63"
        android:text="@string/clean"
        android:textColor="#514F4F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMessage" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="145dp"
        android:layout_height="73dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="86dp"
        android:background="#EF6C63"
        android:text="@string/send"
        android:textColor="#514F4F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMessage" />
</androidx.constraintlayout.widget.ConstraintLayout>