<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:padding="0dp"
    tools:context=".view.UI_MainActivity">

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="235dp"
        android:layout_height="143dp"
        android:background="@mipmap/vivamovies_nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="63dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="388dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.552" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="380dp"
        android:layout_height="62dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.005"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNome"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="179dp"
        android:layout_height="69dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonClean"
        app:layout_constraintTop_toBottomOf="@+id/buttonFacebook" />

    <Button
        android:id="@+id/buttonFacebook"
        android:layout_width="179dp"
        android:layout_height="69dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:text="@string/facebook"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="179dp"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="5dp"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@+id/buttonClean"
        app:layout_constraintEnd_toStartOf="@+id/buttonFacebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/buttonClean"
        android:layout_width="179dp"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="40dp"
        android:text="@string/clean"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>